feat: add delete cart items functionality
