# src/routes/user-routes.js
@@ -2,7 +2,11 @@ import express from "express";
 import { signup, login, authMe } from "../controllers/userControler.js";
 import multer from "multer";
 import getProducts from "../controllers/productsController.js";
-import { getCart, postCart } from "../controllers/cartController.js";
+import {
+  deleteCart,
+  getCart,
+  postCart,
+} from "../controllers/cartController.js";
 import authMiddleware from "../middlewares/auth.middleware.js";
 
 const router = express.Router();
@@ -36,9 +40,10 @@ router.post("/login", login);
 // router.post("/verify", emailVerification);
 router.post("/cart", postCart);
 
-router.get("/products", getProducts);
+router.get("/products", authMiddleware, getProducts);
 router.get("/carts", getCart);
 // router.put("/cart/update", putCart);
 router.get("/auth/me", authMiddleware, authMe);
+router.delete("/carts/:id", deleteCart);
 
 export default router;
